# SciRetriever

./: .gitignore  main.py  page1.json  pyproject.toml  pyrightconfig.json  row0.json  test.html
SciRetriever/retriver/: CJEM.py
example/: GS_insert.py  README  combin.py  crossref.py
example/download/: Elsever_test.py  Elsver.py  scihub.py  scihub_test.py  wiley.py  wiley_test.py
example/searcher/crossref/: crossref.py
example/searcher/googlescholar/: GS_insert.py  run_GS.py
src/Retriver/: CJEM.py
src/SciRetriever/LLM/: utils.py
src/SciRetriever/LLM/prompt/: literature.py  synthesis.py
src/SciRetriever/LLM/script/: batch_literature.py  literature.py  synthsis.py
src/SciRetriever/database/: model.py  optera.py
src/SciRetriever/model/: paper.py
src/SciRetriever/models/: author.py  paper.py
src/SciRetriever/network/: __init__.py  client.py
src/SciRetriever/retriver/: CJEM.py  elsevier.py  retriver.py  scihub.py  spring.py  web.py  wiley.py
src/SciRetriever/searcher/: __init__.py  crossref.py  filter.py  google_scholar.py  searcher.py  semantic_scholar.py
src/SciRetriever/utils/: config.py  exceptions.py  logging.py
src/SciRetriever/workflow/: database_filter.py  insert_database.py  run_GS.py
test/: GS_searcher.py  crossref.py  crossref_row.py  crossref_test.py  insert.py  run_GS.py  run_GS_filled.py  searcher.py  test.py
