[project]
name = "sciretriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bibtexparser>=1.4.3",
    "bs4>=0.0.2",
    "fake-useragent>=2.2.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
librorum = "sciretriever.main:main"
